--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -4,5 +4,5 @@ normal = { family = "Fira Code", style = "Regular" }
 size = 10.5
 
 [window]
-#padding = { x = 5, y = 5 }
+padding = { x = 25, y = 5 }
 
